Fix Earn with us button not showing on mobile view

--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -207,6 +207,9 @@ ul.menu{
   .menu{
     display: none;
   }
+  .contacts{
+    display: flex !important;
+  }
   .navbar{
     margin: 0 !important;
     width: 100% !important;
